--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     margin: 0%;
-    background: #222;
+    background: rgb(46, 46, 46);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 300;
 }
@@ -11,18 +11,15 @@ body{
     
 }
 header{
-    background: #fbfbfb;
+    background: #451D61;
 }
 header::after{
     content: "";
     display: table;
     clear: both;
 }
-.logo{
-    float: left;
-    padding: 15px 70px;
+
     
-}
 nav{
     float: right;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -35,27 +32,27 @@ nav ul{
 }
 nav li{
     display: inline-block;
-    margin-left: 200px;
+    margin-left: 100px;
     padding-top: 13px;
     position: relative;
    
 }
 nav  a{
-color: black;
+color: #bdc1c7;
 text-decoration: none;
 text-transform: uppercase;
 font-size: 20px;
 
 }
 nav a:hover{
-    color: rgb(37, 37, 37);
+    color: white;
     
 }
 nav a::before{
     content: '';
     display: block;
     height: 5px;
-    background-color: rgb(37, 37, 37);
+    background-color: white;
 
     position: absolute;
     top: 0;
@@ -66,3 +63,122 @@ nav a::before{
 nav a:hover::before{
     width: 100% ;
 }
+.space{
+    width: 100%;
+    margin: 0 0px;
+    height: 8px;
+    background-color: #bdc1c7;
+    
+}
+.title{
+    color: whitesmoke;
+    font-size: 40px;
+    margin-left: 120px;
+    padding-top: 20px;
+    position: absolute;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
+.cover{
+     width: 300px; 
+     height: 400px;
+     margin: 20px;
+     border: #451D61;
+     border-style: groove;
+     box-shadow: #451D61;
+     box-shadow: 5px 10px;
+     opacity: 0;
+     pointer-events: none;
+    
+}
+ /* Dropdown Button */
+ .dropbtn {
+    background-color: #451D61;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    opacity: 0;
+    pointer-events: none;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    opacity: 0;
+    pointer-events: none;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: purple;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    opacity: 0;
+    pointer-events: none;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    opacity: 0;
+    pointer-events: none;
+    
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #57257a;} 
+
+ 
+
+
+
+
+
+@media screen and (max-width: 1198px){
+    .mobile{
+        opacity: 0;
+        pointer-events: none;
+        text-decoration: none;
+    }
+    .dropdown-content a {
+        opacity: 100;
+        pointer-events:all;
+    }
+    .dropdown-content {
+        opacity: 100;
+        pointer-events:all;
+    }
+    .dropdown {
+        opacity: 100;
+        pointer-events:all;
+    }
+    .dropbtn {
+        opacity: 100;
+        pointer-events:all;
+    }
+    .cover {
+        opacity: 100;
+        pointer-events:all;
+    }
+    
+}
+
+
+
+ 
+
+  
